plugins/kotlin/idea/tests/testData/multiplatform/duplicateActualsImplicit/middle/middle.kt
package foo

actual class <!LINE_MARKER("descr='Has expects in top module'")!>ActualInMiddleCompatibleInBottom<!>
class CompatibleInMiddleActualInBottom

class CompatibleInMiddleAndBottom
